[package]
name = "yazi"
version = "0.1.3"
authors = ["Chad Brokaw <cbrokaw@gmail.com>"]
edition = "2018"
description = "DEFLATE/zlib compression and decompression."
license = "MIT"
keywords = ["deflate", "zlib", "compression", "decompression"]
categories = ["compression"]
repository = "https://github.com/dfrg/yazi"
homepage = "https://github.com/dfrg/yazi"
readme = "README.md"

[dependencies]
