[package]
name = "yazi"
version = "0.1.6"
authors = ["Chad Brokaw <cbrokaw@gmail.com>"]
edition = "2018"
description = "DEFLATE/zlib compression and decompression."
license = "MIT OR Apache-2.0"
keywords = ["deflate", "zlib", "compression", "decompression"]
categories = ["compression"]
repository = "https://github.com/dfrg/yazi"
homepage = "https://github.com/dfrg/yazi"
readme = "README.md"

[dependencies]
